@@ -9,3 +9,7 @@ Dark Mode
 Light Mode
 
 ![](https://github.com/k33ptoo/RestaurantMgtSampleUI/blob/master/imgs/sc.PNG)
+
+Running:
+- javac --module-path "C:\Program Files\javafx-sdk-18.0.1\lib" --add-modules javafx.controls,javafx.fxml home/*.java
+- java --module-path "C:\Program Files\javafx-sdk-18.0.1\lib" --add-modules javafx.controls,javafx.fxml home.Main
